@@ -1,77 +1,87 @@
 package com.abandonware.ai.agent.service.rag.bm25;
 
-import jakarta.annotation.PostConstruct;
-import org.apache.lucene.analysis.Analyzer;
+import jakarta.annotation.PreDestroy;
 import org.apache.lucene.analysis.standard.StandardAnalyzer;
 import org.apache.lucene.index.DirectoryReader;
+import org.apache.lucene.index.IndexWriter;
+import org.apache.lucene.index.IndexWriterConfig;
 import org.apache.lucene.search.IndexSearcher;
+import org.apache.lucene.store.Directory;
 import org.apache.lucene.store.FSDirectory;
-import org.apache.lucene.index.IndexReader;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 import org.springframework.stereotype.Component;
+
 import java.io.IOException;
+import java.nio.file.Files;
 import java.nio.file.Path;
-import com.abandonware.ai.agent.config.Bm25Props;
+import java.nio.file.Paths;
 
 @Component
-/**
- * [GPT-PRO-AGENT v2] - concise navigation header (no runtime effect).
- * Module: com.abandonware.ai.agent.service.rag.bm25.Bm25IndexHolder
- * Role: config
- * Dependencies: com.abandonware.ai.agent.config.Bm25Props
- * Observability: propagates trace headers if present.
- * Thread-Safety: unknown.
- */
-/* agent-hint:
-id: com.abandonware.ai.agent.service.rag.bm25.Bm25IndexHolder
-role: config
-*/
 public class Bm25IndexHolder {
 
-    private final Bm25Props props;
-    private IndexReader reader;
-    private IndexSearcher searcher;
-    private Analyzer analyzer;
+    private static final Logger log = LoggerFactory.getLogger(Bm25IndexHolder.class);
 
-    public Bm25IndexHolder(Bm25Props props) {
-        this.props = props;
-    }
+    private final Path indexPath;
+    private final Directory dir;
 
-    @PostConstruct
-    public void init() throws IOException {
-        Path p = Path.of(props.getIndexPath());
-        if (!java.nio.file.Files.exists(p)) {
-            java.nio.file.Files.createDirectories(p);
+    private volatile DirectoryReader reader;
+
+    public Bm25IndexHolder() {
+        this.indexPath = Paths.get(System.getProperty("user.dir"), "bm25_index");
+        try {
+            Files.createDirectories(indexPath);
+            this.dir = FSDirectory.open(indexPath);
+
+            // Ensure an index exists (even empty) so DirectoryReader.open won't explode.
+            if (!DirectoryReader.indexExists(dir)) {
+                try (IndexWriter w = new IndexWriter(dir, new IndexWriterConfig(new StandardAnalyzer()))) {
+                    w.commit();
+                }
+            }
+
+            this.reader = DirectoryReader.open(dir);
+        } catch (IOException e) {
+            throw new RuntimeException("Failed to init BM25 index at " + indexPath, e);
         }
-        this.analyzer = createAnalyzer(props.getAnalyzer());
-        // Lazily open reader when index exists to avoid startup failure
-        if (DirectoryReader.indexExists(FSDirectory.open(p))) {
-            this.reader = DirectoryReader.open(FSDirectory.open(p));
-            this.searcher = new IndexSearcher(reader);
+    }
+
+    public Path indexPath() {
+        return indexPath;
+    }
+
+    public IndexSearcher searcher() {
+        refreshIfNeeded();
+        return new IndexSearcher(reader);
+    }
+
+    public synchronized void refreshIfNeeded() {
+        try {
+            DirectoryReader newReader = DirectoryReader.openIfChanged(reader);
+            if (newReader != null) {
+                DirectoryReader old = reader;
+                reader = newReader;
+                try {
+                    old.close();
+                } catch (IOException ignore) {
+                    // ignore
+                }
+                log.info("BM25 index reader refreshed.");
+            }
+        } catch (IOException e) {
+            log.warn("BM25 index refresh failed: {}", e.toString());
         }
     }
 
-    public IndexSearcher searcher() throws IOException {
-        if (searcher == null && reader != null) {
-            searcher = new IndexSearcher(reader);
+    @PreDestroy
+    public void close() {
+        try {
+            reader.close();
+        } catch (IOException ignore) {
         }
-        return searcher;
+        try {
+            dir.close();
+        } catch (IOException ignore) {
+        }
     }
-
-    public Analyzer analyzer() {
-        return analyzer;
-    }
-
-private Analyzer createAnalyzer(String name) {
-    if (!"nori".equalsIgnoreCase(name)) {
-        return new StandardAnalyzer();
-    }
-    try {
-        Class<?> clazz = Class.forName("org.apache.lucene.analysis.ko.NoriAnalyzer");
-        java.lang.reflect.Constructor<?> ctor = clazz.getDeclaredConstructor();
-        Object instance = ctor.newInstance();
-        return (Analyzer) instance;
-    } catch (Throwable ignore) { /* analyzer not on classpath */ }
-    return new StandardAnalyzer();
-}
-
 }
